# task-worker-rust

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  readme.md
.circleci/: config.yaml
src/: main.rs
src/config/: kafka.rs
src/handlers/: http.rs  http_request.rs  kafka.rs  kafka_request.rs  mod.rs  response.rs
src/router/: mod.rs
