[package]
name = "task-worker-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1

[dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["full"]}
hyper-tls = "0.5.0"
rdkafka = { version = "0.32.2", features = ["cmake-build", "ssl-vendored"]}
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"]}
validator = { version = "0.16.0", features = ["derive"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.0"